# xhec-mlops-project-student

./: .gitignore  .pre-commit-config.yaml  Dockerfile.app  README.md  environment.yml  prefect.yaml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yaml
notebooks/: df.csv  eda.ipynb  modelling.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/0/13dbfc4965ca451d97b9b87615b8b8f5/: meta.yaml
notebooks/mlruns/0/1b6a3ed8e305406c8b9ee26ae3bca84c/: meta.yaml
notebooks/mlruns/0/2cdb4c2e0b7b4c33bfdac8a6333665a2/: meta.yaml
notebooks/mlruns/0/619e04b453d84657aef141c6701b33c4/: meta.yaml
notebooks/mlruns/0/675f137429bc469ea6f59ef6aa2b4e24/: meta.yaml
notebooks/mlruns/0/7c5998ce2dbe455e93f078fae38c9496/: meta.yaml
notebooks/mlruns/0/9d28cc69a7d442df9346bb4631ef525d/: meta.yaml
notebooks/mlruns/0/a1de623818e1437783566d591e36bf28/: meta.yaml
notebooks/mlruns/0/b79880107db343c993cab114f5ae0f58/: meta.yaml
notebooks/mlruns/0/d1300d0796f1484394ceb876a6489b88/: meta.yaml
notebooks/mlruns/0/d79d6f826e8a493f88af46233557fea9/: meta.yaml
notebooks/mlruns/0/de08666a432b48a0adf080617914e918/: meta.yaml
notebooks/mlruns/0/ef88d6099655471aaefa552ae4d92045/: meta.yaml
notebooks/mlruns/0/f0d38e17803142d688be4a8cba957242/: meta.yaml
notebooks/mlruns/0/feadf7f7fdea4e58b56e1a8df1d46975/: meta.yaml
src/modelling/: main.py  predicting.py  preprocessing.py  scaler.pkl  training.py  utils.py
src/web_service/: main.py
src/web_service/local_objects/: Ridge_Model.pkl  scaler.pkl
(+110 files in other folders)
