[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xhec-mlops-project-student"
authors = [
  { name = "hadrienstrichard", email = "hadrienstrichard@gmail.com" },
  { name = "Hozidi", email = "hozidi@email.com" },
  { name = "JokyHub", email = "eudes.agbre@email.com" },
  { name = "tarekmassoud", email = "t.massoud@hotmail.com" },
  { name = "cathal-brady", email = "cathalbrady@polytechnique.edu" }
]
description = "This repository contains the solution for the X-HEC MLOps Project on the industrialization of Abalone age prediction model."
version = "0.0.1"
readme = "README.md"
requires-python = ">3.10"

[project.urls]
"Homepage" = "https://github.com/cathal-brady/xhec-mlops-project-student.git"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
